src/app/cart/cart.module.css
.main {
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 64px 4px;
  background-color: var(--color-lightPink);
  min-height: calc(100vh - 500px);
}

.container {
  display: flex;
  flex-direction: column;
  max-width: 1600px;
  width: 90vw;
  align-items: center;
  gap: 40px;
}

.backButton {
  display: flex;
  align-items: center;
  gap: 4px;
  color: var(--color-darkPink);
  align-self: self-start;
  font-size: 18px;
  cursor: pointer;
}

.productsContainer {
  display: flex;
  width: 100%;
  justify-content: space-between;
  align-items: flex-start;
}
.products {
  display: flex;
  flex-direction: column;
  gap: 48px;
  width: 50vw;
  max-height: 50vh;
  overflow-y: auto;
  overscroll-behavior: contain;
  scrollbar-gutter: stable;
  padding: 40px;
  border: 5px solid #edabe188;
  border-radius: 32px;
  background-color: white;
  box-shadow: 0px 6px 10px -6px rgba(0, 0, 0, 0.7);
}

.product {
  display: flex;

  justify-content: space-between;
}

.products::-webkit-scrollbar {
  width: 12px;
}

.products::-webkit-scrollbar-track {
  background: transparent;
  margin: 24px 6px 24px 0;
}

.products::-webkit-scrollbar-thumb {
  background-color: #edabe188;
  border-radius: 999px;
  border: 3px solid white;
}

.productLeft {
  display: flex;
  gap: 18px;
  align-items: center;
}

.productRight {
  display: flex;
  flex-direction: column;
  gap: 50px;
}

.productDetails {
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.productImage {
  border-radius: 20px;
  width: 120px;
  object-fit: cover;
  object-position: bottom;
  height: 120px;
}

.productName {
  color: var(--color-darkPink);
  font-size: 28px;
  font-family: var(--font-noodle);
}

.productCategory {
  font-size: 16px;
  color: #999a9b;
  display: flex;
}

.actionButtons {
  display: flex;
  gap: 24px;
  justify-content: start;
  margin-top: 24px;
  align-items: center;
}

.checkoutContainer {
  display: flex;
  flex-direction: column;
  gap: 24px;
  width: 20vw;
  height: fit-content;
  padding: 40px;
  border: 5px solid #edabe188;
  border-radius: 32px;
  background-color: white;
  box-shadow: 0px 6px 10px -6px rgba(0, 0, 0, 0.7);
}

.emptyContainer {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 24px;
  padding: 40px;
  border: 5px solid #edabe188;
  border-radius: 32px;
  background-color: white;
}

.emptyIcon {
  background: linear-gradient(to right, #feebf6, #c9dff0);
  border-radius: 36px;
  padding: 24px;
  color: var(--color-darkPink);
  font-size: 200px;
}

.trashIcon {
  display: flex;
  align-self: end;
  cursor: pointer;
}

@media only screen and (max-width: 1280px) {
  .main {
    padding: 55px 18px;
  }
  .main {
    min-height: calc(100vh - 500px);
  }

  .emptyContainer {
    padding: 64px;
  }
}

@media only screen and (max-width: 1120px) {
  .main {
    padding: 64px 18px;
  }

  .container {
    width: 100%;
    max-width: 100%;
  }
  .heading {
    text-align: center;
    font-size: 36px;
    line-height: 48px;
  }

  .para {
    font-size: 16px;
  }

  .backButton {
    font-size: 16px;
    margin-bottom: -12px;
  }

  .productsContainer {
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 24px;
  }

  .products {
    width: 70vw;
  }
  .product {
    flex-direction: column;
    justify-content: center;
    position: relative;
    gap: 24px;
  }

  .productLeft {
    gap: 24px;
  }

  .productRight {
    align-items: end;
    gap: 10px;
  }

  .productPricing {
    align-items: center;
  }
  .trashIcon {
    position: absolute;
    right: 0px;
    top: 5px;
  }

  .checkoutContainer {
    width: 70vw;
  }
}

